<resources>

    <string name="app_name">Great Schools Week</string>

    <string-array name="nav_array">
        <item>Search</item>
        <item>Browse By Category</item>
        <item>Browse By Day</item>
        <item>Browse By Percent</item>
        <item>About</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="search_businesses">Search businesses...</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thur</string>
    <string name="fri">Fri</string>
    <string name="allsales">All Sales</string>
    <string name="Notes">Notes</string>
    <string name="abouttitle">About Great Schools Week:</string>
    <string name="aboutceef">About CEEF:</string>
    <string name="aboutceeftext">The Cupertino Educational Endowment Foundation (CEEF) is a 501c3 public charity (Tax ID# 77-0073617) committed to supporting outstanding public education for students in the Cupertino Union School District (CUSD).  As a community partner for excellence in local education, CEEF works with CUSD, parents, and the community to raise funds for excellent educational programs that are beyond what is possible through federal and state funding. </string>
    <string name="aboutgswtext">Great Schools Week is a community-wide fundraiser organized by CEEF to benefit 19,000+ children in the Cupertino Union School District (CUSD).  In partnership with local businesses, Great Schools Week has generated donations totaling $150,000 to protect our great schools since 2010.</string>
	<string name="ceefurl">http://www.ceefcares.org</string>
	<string name="closingtext">We hope you find this app helpful during this year’s GSW event. We would love to hear your feedback and suggestions on how to make it better.</string>
	<string name="ceefemail">gswapp@ceef.org</string>
</resources>